syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.buaa.lottery.executor";
option java_outer_classname = "ExecutorProto";
option objc_class_prefix = "E";

package executor;

// The executor service definition.
service Executor {
  
  rpc query(QueryRequest) returns (StateReply){}
  rpc verify(VerifyRequest) returns (BooleanReply){}
  rpc newblock(BlockRequest) returns (BooleanReply){}
  rpc querytrie(QueryTrieRequest) returns (TrieReply) {}
  rpc updatetrie(UpdateTrieRequest) returns (TrieReply) {}
  rpc updatesubtrie(UpdateSubTrieRequest) returns (TrieReply) {}
  rpc querytrienode(QueryTrieNodeRequest) returns (stream NodeReply) {}
  rpc querysync(QuerySyncRequest) returns (SyncReply) {}
  rpc updatesync(UpdateSyncRequest) returns (BooleanReply) {}
}

// The request message containing nothing.
message QueryRequest {
  string message = 1;
}

// The response message containing the State of the Executor
message StateReply {
  string state_root = 1;
  int32 state_height = 2;
  int32 state_tx = 3;
  int32 state_latest = 4;
}

// The request message containing state_root, state_height, state_tx
message VerifyRequest {
  string state_root = 1;
  int32 state_height = 2;
  int32 state_tx = 3;
}

// The response message containing true/false
message BooleanReply {
  bool result = 1;
}

// The request message containing block
message BlockRequest {
  string block = 1;
}

message QueryTrieRequest {
  string triekey = 1;
  string fieldkey = 2;
}

message TrieReply {
  string reply = 1;
}

message UpdateTrieRequest {
  string triekey = 1;
  string fieldkey = 2;
  string value = 3;
}

message UpdateSubTrieRequest {
  string root = 1;
  string triekey = 2;
  string subtriekey = 3;
  string value = 4;
}

message QueryTrieNodeRequest {
  string root = 1;
}

message NodeReply {
  string node = 1;
}

message QuerySyncRequest {
  int32 state_height = 1;
  int32 state_tx = 2;
}

message UpdateSyncRequest {
  string syncstr = 1;
}

message SyncReply {
  string syncreply = 1;
}
  
